--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯（完整句｜別人的原音+譯音）</title>
+<title>中↔韓 同聲傳譯（譯音自己也聽得到｜原音只給別人）</title>
 <style>
   body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:900px;margin:auto}
   .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
@@ -16,68 +16,87 @@
   .hint{color:#666;font-size:13px}
 </style>
 <body>
-  <h2>中↔韓 同聲傳譯（完整句｜別人的原音+譯音）</h2>
+  <h2>中↔韓 同聲傳譯（說一句翻一句｜你會聽到「翻譯音」）</h2>
 
   <div class="row">
-    <label>名稱(이름)</label>
-    <input id="name" type="text" placeholder="你的名字(이름)" value="Public">
-    <label>來源語言(원어)</label>
+    <label>名稱</label>
+    <input id="name" type="text" placeholder="你的名字" value="Public">
+    <label>來源語言</label>
     <select id="srcLang">
-      <option value="zh" selected>中文（強制）</option>
-      <option value="ko">韓文（強制）</option>
+      <option value="zh" selected>中文</option>
+      <option value="ko">韓文</option>
     </select>
-    <button id="join">加入(입장)</button>
-    <button id="leave" disabled>離開(나가기)</button>
+    <button id="join">加入</button>
+    <button id="leave" disabled>離開</button>
     <span class="pill" id="status">未連線</span>
   </div>
 
   <div class="row" style="margin-top:10px">
-    <label><input id="mute" type="checkbox"> 對自己禁音（不送出麥克風）</label>
+    <label><input id="mute" type="checkbox"> 不送出麥克風</label>
     <label><input id="echo" type="checkbox" checked> 回聲抑制</label>
-    <label><input id="ns" type="checkbox" checked> 降噪</label>
-    <label><input id="agc" type="checkbox" checked> 自動增益</label>
+    <label><input id="ns"   type="checkbox" checked> 降噪</label>
+    <label><input id="agc"  type="checkbox" checked> 自動增益</label>
     <span class="stat" id="tx">TX: 0 pkt/s</span>
   </div>
 
   <div class="row" style="margin-top:10px">
-    <label for="micSel">輸入裝置(마이크)</label>
+    <label for="micSel">輸入裝置</label>
     <select id="micSel"></select>
-    <span class="hint">建議用耳機，避免回授造成誤觸發。</span>
+    <label for="outSel">輸出裝置</label>
+    <select id="outSel"></select>
+    <span class="hint">AirPods：輸入選「Headset/麥克風」，輸出選「Headphones/耳機」。自由切換，不會被強制改動。</span>
   </div>
 
   <div class="logs" id="logs"></div>
 
 <script>
-/* 換成你的 trycloudflare 網域（含 https://） */
+/* 改成你當次 cloudflared 顯示的網址（含 https://） */
 const TUNNEL_HOST = "https://cleaners-fridge-mineral-appearance.trycloudflare.com";
 
-let ws=null, audioCtx=null, worklet=null, stream=null, pingTimer=null, txTimer=null;
-let playQueue=[], playing=false, joined=false, txPkts=0;
+let ws=null, audioCtx=null, worklet=null, sp=null, stream=null, pingTimer=null, txTimer=null;
+let txPkts=0;
 
-const $  = (s)=>document.querySelector(s);
-const log= (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
+let devicesCache=[];
+let currentMicId=""; let currentOutId="";
 
-async function listMics(){
-  try{
-    const devs = await navigator.mediaDevices.enumerateDevices();
-    const mics = devs.filter(d=>d.kind==="audioinput");
-    const sel = $('#micSel'); sel.innerHTML="";
-    mics.forEach(d=>{
-      const opt=document.createElement('option');
-      opt.value=d.deviceId; opt.textContent=d.label || `麥克風 (${d.deviceId.slice(0,6)}…)`;
-      sel.appendChild(opt);
-    });
-  }catch(e){ log(`❌ 裝置列舉失敗：${e}`); }
+const $ = (s)=>document.querySelector(s);
+const log = (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
+
+async function refreshDevices(){
+  devicesCache = await navigator.mediaDevices.enumerateDevices();
+  const mics = devicesCache.filter(d=>d.kind==="audioinput");
+  const outs = devicesCache.filter(d=>d.kind==="audiooutput");
+
+  const micSel=$('#micSel'); micSel.innerHTML="";
+  mics.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `麥克風(${d.deviceId.slice(0,6)}…)`; micSel.appendChild(o); });
+
+  const outSel=$('#outSel'); outSel.innerHTML="";
+  outs.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `輸出(${d.deviceId.slice(0,6)}…)`; outSel.appendChild(o); });
+
+  if (currentMicId && [...micSel.options].some(o=>o.value===currentMicId)) micSel.value=currentMicId;
+  if (currentOutId && [...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
+}
+
+function pickOutputForMic(micId){
+  const mic = devicesCache.find(d=>d.deviceId===micId && d.kind==="audioinput");
+  const outs = devicesCache.filter(d=>d.kind==="audiooutput");
+  if (!mic || outs.length===0) return;
+  let cand = outs.filter(o=>o.groupId && mic.groupId && o.groupId===mic.groupId);
+  const prefer = (label)=>/headphone|headset|airpods|buds|耳機|藍牙/i.test(label||"");
+  cand = cand.sort((a,b)=> (prefer(b.label)?1:0) - (prefer(a.label)?1:0));
+  const pick = cand[0] || outs[0];
+  currentOutId = pick.deviceId;
+  $('#outSel').value = currentOutId;
 }
 
 async function getMicStream(deviceId){
   const cts = {
     audio:{
       deviceId: deviceId ? {exact: deviceId} : undefined,
-      channelCount:1, sampleRate:48000, sampleSize:16,
-      echoCancellation: $('#echo').checked,
-      noiseSuppression: $('#ns').checked,
-      autoGainControl:  $('#agc').checked
+      channelCount:{ideal:1}, sampleRate:{ideal:48000}, sampleSize:{ideal:16},
+      echoCancellation:{ideal: $('#echo').checked},
+      noiseSuppression:{ideal: $('#ns').checked},
+      autoGainControl:{ideal: $('#agc').checked}
     }
   };
   return await navigator.mediaDevices.getUserMedia(cts);
@@ -85,33 +104,34 @@ async function getMicStream(deviceId){
 
 function cleanupAudio(){
   try{ worklet && worklet.disconnect(); }catch(_){}
+  try{ sp && sp.disconnect(); }catch(_){}
   try{ stream && stream.getTracks().forEach(t=>t.stop()); }catch(_){}
   try{ audioCtx && audioCtx.close(); }catch(_){}
   try{ clearInterval(pingTimer); }catch(_){}
   try{ clearInterval(txTimer); }catch(_){}
-  worklet=null; audioCtx=null; stream=null; pingTimer=null; txTimer=null; txPkts=0;
+  worklet=sp=null; audioCtx=null; stream=null; pingTimer=txTimer=null; txPkts=0;
 }
 
 function leave(){
   if(ws){ try{ ws.close(); }catch(_){} }
   cleanupAudio();
-  $('#join').disabled=false; $('#leave').disabled=true; joined=false;
+  $('#join').disabled=false; $('#leave').disabled=true;
   $('#status').textContent="未連線"; $('#status').classList.remove('now');
 }
 
 async function fallbackScriptProcessor(source){
-  const sp = audioCtx.createScriptProcessor(2048, 1, 1);
-  sp.onaudioprocess = (e)=>{
-    const ch = e.inputBuffer.getChannelData(0);
-    const ratio = 3; // 48k -> 16k
-    const outLen = Math.floor(ch.length/ratio);
-    const pcm = new Int16Array(outLen);
+  sp = audioCtx.createScriptProcessor(2048,1,1);
+  sp.onaudioprocess = (ev)=>{
+    const ch=ev.inputBuffer.getChannelData(0);
+    const ratio=48000/16000;
+    const outLen=Math.floor(ch.length/ratio);
+    const pcm=new Int16Array(outLen);
     for(let i=0;i<outLen;i++){
-      let s = ch[i*ratio];
+      const idx=(i*ratio)|0; let s=ch[idx];
       if(s>1) s=1; if(s<-1) s=-1;
-      pcm[i] = s<0 ? s*0x8000 : s*0x7FFF;
+      pcm[i]=s<0?s*0x8000:s*0x7FFF;
     }
-    const pkt=320; // 20ms@16k
+    const pkt=320;
     for(let off=0; off<pcm.length; off+=pkt){
       const sl=pcm.subarray(off, off+pkt);
       if(sl.length===pkt){
@@ -122,16 +142,22 @@ async function fallbackScriptProcessor(source){
       }
     }
   };
-  try{ source.connect(sp); sp.connect(audioCtx.destination); }catch(_){}
+  source.connect(sp);
   log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
 }
 
 async function join(){
-  if (joined) return;
-  await listMics();
+  try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}
+  await refreshDevices();
+
+  // 優先 AirPods
+  const airMic = devicesCache.find(d=>d.kind==="audioinput"  && /airpods|headset/i.test(d.label||""));
+  const airOut = devicesCache.find(d=>d.kind==="audiooutput" && /airpods|headphone/i.test(d.label||""));
+  if (airMic) { currentMicId = airMic.deviceId; $('#micSel').value=currentMicId; }
+  if (airOut) { currentOutId = airOut.deviceId; $('#outSel').value=currentOutId; }
 
   const name = ($('#name').value || 'Guest').trim().slice(0,40);
-  const srcLang = $('#srcLang').value; // 'zh' | 'ko'
+  const srcLang = $('#srcLang').value;
 
   ws = new WebSocket(`${TUNNEL_HOST.replace('https://','wss://')}/ws`);
   ws.binaryType = 'arraybuffer';
@@ -150,34 +176,32 @@ async function join(){
     audioCtx = new (window.AudioContext||window.webkitAudioContext)({sampleRate:48000});
     await audioCtx.resume().catch(()=>{});
 
-    // 優先 AudioWorklet，沒送包就 fallback
     try{
       if (audioCtx.audioWorklet) {
         const blobURL = URL.createObjectURL(new Blob([`
-          class PCMWorklet extends AudioWorkletProcessor {
+          class ResampleWorklet extends AudioWorkletProcessor {
             constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; }
             process(inputs){
-              const input=inputs[0]; if(!input||!input[0]) return true;
-              const ch=input[0], ratio=this.srcRate/this.dstRate;
-              const outLen=Math.floor(ch.length/ratio);
+              const i=inputs[0]; if(!i||!i[0]) return true;
+              const x=i[0]; const ratio=this.srcRate/this.dstRate;
+              const outLen=Math.floor(x.length/ratio);
               const pcm=new Int16Array(outLen);
-              for(let i=0;i<outLen;i++){
-                const idx=Math.floor(i*ratio); let s=ch[idx];
-                s=Math.max(-1,Math.min(1,s)); pcm[i]=s<0?s*0x8000:s*0x7FFF;
+              for(let k=0;k<outLen;k++){
+                const pos=(k*ratio)|0; let s=x[pos];
+                s=Math.max(-1,Math.min(1,s)); pcm[k]=s<0?s*0x8000:s*0x7FFF;
               }
-              const pkt=320;
-              for(let off=0; off<pcm.length; off+=pkt){
-                const sl=pcm.subarray(off, off+pkt);
-                if(sl.length===pkt) this.port.postMessage(sl.buffer,[sl.buffer]);
+              for(let off=0; off<pcm.length; off+=320){
+                const sl=pcm.subarray(off, off+320);
+                if(sl.length===320) this.port.postMessage(sl.buffer,[sl.buffer]);
               }
               return true;
             }
           }
-          registerProcessor('pcm-worklet', PCMWorklet);
+          registerProcessor('resample-worklet', ResampleWorklet);
         `], {type:'application/javascript'}));
         await audioCtx.audioWorklet.addModule(blobURL);
         const source = audioCtx.createMediaStreamSource(stream);
-        worklet = new AudioWorkletNode(audioCtx, 'pcm-worklet');
+        worklet = new AudioWorkletNode(audioCtx, 'resample-worklet');
         let sent=0;
         worklet.port.onmessage = (e)=>{
           sent++; txPkts++;
@@ -186,42 +210,46 @@ async function join(){
           }
         };
         source.connect(worklet);
+        setTimeout(()=>{ if(sent===0){ log("⚠️ Worklet 無送包，改 ScriptProcessor"); try{ worklet.disconnect(); }catch(_){ } fallbackScriptProcessor(source); } }, 600);
         log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
-        setTimeout(()=>{
-          if(sent===0){
-            log("⚠️ Worklet 無送包，改用 ScriptProcessor");
-            try{ worklet.disconnect(); }catch(_){}
-            fallbackScriptProcessor(source);
-          }
-        }, 500);
       } else {
         const source = audioCtx.createMediaStreamSource(stream);
-        fallbackScriptProcessor(source);
+        await fallbackScriptProcessor(source);
       }
     }catch(e){
       const source = audioCtx.createMediaStreamSource(stream);
       log(`⚠️ Worklet 失敗：${e}`);
-      fallbackScriptProcessor(source);
+      await fallbackScriptProcessor(source);
     }
 
     txTimer = setInterval(()=>{ $('#tx').textContent = `TX: ${txPkts} pkt/s`; txPkts=0; }, 1000);
-    joined = true; $('#join').disabled=true; $('#leave').disabled=false;
+    $('#join').disabled=true; $('#leave').disabled=false;
     pingTimer = setInterval(()=>{ try{ ws.send(JSON.stringify({type:"ping"})); }catch(_){ } }, 20000);
   };
 
-  ws.onmessage = (ev)=>{
+  ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      playQueue.push(ev.data);
-      if(!playing) playNext();
+      const buf=ev.data;
+      const mime = sniffMime(buf);
+      const blob=new Blob([buf],{type:mime});
+      const url=URL.createObjectURL(blob);
+      const a=new Audio(url);
+      a.autoplay = true;
+      // 讓你自由切換輸出裝置
+      if (typeof a.setSinkId === 'function' && $('#outSel').value){
+        try { await a.setSinkId($('#outSel').value); } catch(e){ log(`⚠️ 設定輸出失敗：${e}`); }
+      }
+      a.onended=()=>{ URL.revokeObjectURL(url); };
+      a.play().catch(()=>{});
       return;
     }
     try{
       const o=JSON.parse(ev.data);
-      if(o.type==="join")    log(`🔵 ${o.name} 加入，人數 ${o.count}`);
-      if(o.type==="leave")   log(`⚪ ${o.name} 離開，人數 ${o.count}`);
-      if(o.type==="final")   log(`✅ ${o.from}（${o.dir}）\n原文：${o.text}\n翻譯：${o.mt}`);
-      if(o.type==="mute")    log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
-      if(o.type==="error")   log(`❌ ${o.msg}`);
+      if(o.type==="join")  log(`🔵 ${o.name} 加入，人數 ${o.count}`);
+      if(o.type==="leave") log(`⚪ ${o.name} 離開，人數 ${o.count}`);
+      if(o.type==="final") log(`✅ ${o.from}（${o.dir}）\n原文：${o.text}\n翻譯：${o.mt}`);
+      if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
+      if(o.type==="error") log(`❌ ${o.msg}`);
     }catch(_){}
   };
 
@@ -229,34 +257,39 @@ async function join(){
 }
 
 function sniffMime(buf){
-  // WAV = 'RIFF' .... 'WAVE' header
   if (buf.byteLength >= 12){
     const dv = new DataView(buf);
     const riff = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
     const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
     if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
   }
-  // 其他一律當 MP3（edge-tts）
   return 'audio/mpeg';
-}
-
-async function playNext(){
-  if(playQueue.length===0){ playing=false; return; }
-  playing=true;
-  const buf=playQueue.shift();
-  const mime = sniffMime(buf);
-  const blob=new Blob([buf],{type:mime});
-  const url=URL.createObjectURL(blob);
-  const a=new Audio(url);
-  a.onended=()=>{ URL.revokeObjectURL(url); playNext(); };
-  a.play().catch(()=>{ /* 某些瀏覽器需要使用者互動後才可自動播放 */ });
 }
 
 $('#join').onclick = join;
 $('#leave').onclick = leave;
 $('#mute').onchange = ()=>{ if(ws && ws.readyState===1) ws.send(JSON.stringify({type:'mute', value:$('#mute').checked})); };
-navigator.mediaDevices.addEventListener('devicechange', listMics);
-listMics();
+
+$('#micSel').onchange = async ()=>{
+  currentMicId = $('#micSel').value || "";
+  await refreshDevices();
+  pickOutputForMic(currentMicId);
+};
+$('#outSel').onchange = ()=>{ currentOutId = $('#outSel').value || ""; };
+
+navigator.mediaDevices.addEventListener('devicechange', async ()=>{
+  const prevMic = currentMicId, prevOut = currentOutId;
+  await refreshDevices();
+  if (prevMic && !devicesCache.some(d=>d.kind==="audioinput" && d.deviceId===prevMic)) {
+    currentMicId = $('#micSel').value;
+  }
+  if (prevOut && !devicesCache.some(d=>d.kind==="audiooutput" && d.deviceId===prevOut)) {
+    pickOutputForMic(currentMicId || $('#micSel').value);
+  }
+});
+
+// 首次：拿權限→列裝置
+(async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
 </body>
 </html>
