--- a/index4.html
+++ b/index4.html
@@ -2,9 +2,9 @@
 <html lang="zh-Hant">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯（譯音自己也聽得到｜原音只給別人）</title>
+<title>中↔韓 同聲傳譯（4060｜不回放自己原音｜譯音自己也聽到）</title>
 <style>
-  body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:900px;margin:auto}
+  body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:920px;margin:auto}
   .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
   input,select,button{padding:8px 10px;border:1px solid #bbb;border-radius:10px;background:#fff}
   button{cursor:pointer}
@@ -16,11 +16,11 @@
   .hint{color:#666;font-size:13px}
 </style>
 <body>
-  <h2>中↔韓 同聲傳譯（說一句翻一句｜你會聽到「翻譯音」）</h2>
+  <h2>中↔韓 同聲傳譯（說一句翻一句｜不回放自己原音｜譯音自己也聽到）</h2>
 
   <div class="row">
     <label>名稱</label>
-    <input id="name" type="text" placeholder="你的名字" value="Public">
+    <input id="name" type="text" value="Public" />
     <label>來源語言</label>
     <select id="srcLang">
       <option value="zh" selected>中文</option>
@@ -35,7 +35,7 @@
     <label><input id="mute" type="checkbox"> 不送出麥克風</label>
     <label><input id="echo" type="checkbox" checked> 回聲抑制</label>
     <label><input id="ns"   type="checkbox" checked> 降噪</label>
-    <label><input id="agc"  type="checkbox" checked> 自動增益</label>
+    <label><input id="agc"  type="checkbox"> 自動增益</label>
     <span class="stat" id="tx">TX: 0 pkt/s</span>
   </div>
 
@@ -44,20 +44,19 @@
     <select id="micSel"></select>
     <label for="outSel">輸出裝置</label>
     <select id="outSel"></select>
-    <span class="hint">AirPods：輸入選「Headset/麥克風」，輸出選「Headphones/耳機」。自由切換，不會被強制改動。</span>
+    <span class="hint">AirPods：輸入選「Headset/麥克風」，輸出選「Headphones/耳機」。可自由切換，不會被強制改。</span>
   </div>
 
   <div class="logs" id="logs"></div>
 
 <script>
-/* 改成你當次 cloudflared 顯示的網址（含 https://） */
+/* 換成 cloudflared 顯示的網址（含 https://） */
 const TUNNEL_HOST = "https://cleaners-fridge-mineral-appearance.trycloudflare.com";
 
 let ws=null, audioCtx=null, worklet=null, sp=null, stream=null, pingTimer=null, txTimer=null;
 let txPkts=0;
 
-let devicesCache=[];
-let currentMicId=""; let currentOutId="";
+let devicesCache=[]; let currentMicId=""; let currentOutId="";
 
 const $ = (s)=>document.querySelector(s);
 const log = (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
@@ -75,18 +74,6 @@ async function refreshDevices(){
 
   if (currentMicId && [...micSel.options].some(o=>o.value===currentMicId)) micSel.value=currentMicId;
   if (currentOutId && [...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
-}
-
-function pickOutputForMic(micId){
-  const mic = devicesCache.find(d=>d.deviceId===micId && d.kind==="audioinput");
-  const outs = devicesCache.filter(d=>d.kind==="audiooutput");
-  if (!mic || outs.length===0) return;
-  let cand = outs.filter(o=>o.groupId && mic.groupId && o.groupId===mic.groupId);
-  const prefer = (label)=>/headphone|headset|airpods|buds|耳機|藍牙/i.test(label||"");
-  cand = cand.sort((a,b)=> (prefer(b.label)?1:0) - (prefer(a.label)?1:0));
-  const pick = cand[0] || outs[0];
-  currentOutId = pick.deviceId;
-  $('#outSel').value = currentOutId;
 }
 
 async function getMicStream(deviceId){
@@ -120,6 +107,8 @@ function leave(){
 }
 
 async function fallbackScriptProcessor(source){
+  // 用 ScriptProcessor 串到一個「靜音」的 zeroGain → destination，process 會跑但不回放自己原音
+  const zeroGain = audioCtx.createGain(); zeroGain.gain.value = 0;
   sp = audioCtx.createScriptProcessor(2048,1,1);
   sp.onaudioprocess = (ev)=>{
     const ch=ev.inputBuffer.getChannelData(0);
@@ -142,19 +131,13 @@ async function fallbackScriptProcessor(source){
       }
     }
   };
-  source.connect(sp);
+  source.connect(sp); sp.connect(zeroGain); zeroGain.connect(audioCtx.destination);
   log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
 }
 
 async function join(){
   try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}
   await refreshDevices();
-
-  // 優先 AirPods
-  const airMic = devicesCache.find(d=>d.kind==="audioinput"  && /airpods|headset/i.test(d.label||""));
-  const airOut = devicesCache.find(d=>d.kind==="audiooutput" && /airpods|headphone/i.test(d.label||""));
-  if (airMic) { currentMicId = airMic.deviceId; $('#micSel').value=currentMicId; }
-  if (airOut) { currentOutId = airOut.deviceId; $('#outSel').value=currentOutId; }
 
   const name = ($('#name').value || 'Guest').trim().slice(0,40);
   const srcLang = $('#srcLang').value;
@@ -178,6 +161,7 @@ async function join(){
 
     try{
       if (audioCtx.audioWorklet) {
+        // Worklet 也要接到「靜音 zeroGain」→ destination，否則 process 不會被拉動（TX=0）
         const blobURL = URL.createObjectURL(new Blob([`
           class ResampleWorklet extends AudioWorkletProcessor {
             constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; }
@@ -200,8 +184,11 @@ async function join(){
           registerProcessor('resample-worklet', ResampleWorklet);
         `], {type:'application/javascript'}));
         await audioCtx.audioWorklet.addModule(blobURL);
-        const source = audioCtx.createMediaStreamSource(stream);
+
+        const source   = audioCtx.createMediaStreamSource(stream);
+        const zeroGain = audioCtx.createGain(); zeroGain.gain.value = 0;
         worklet = new AudioWorkletNode(audioCtx, 'resample-worklet');
+
         let sent=0;
         worklet.port.onmessage = (e)=>{
           sent++; txPkts++;
@@ -209,9 +196,11 @@ async function join(){
             ws.send(e.data);
           }
         };
-        source.connect(worklet);
-        setTimeout(()=>{ if(sent===0){ log("⚠️ Worklet 無送包，改 ScriptProcessor"); try{ worklet.disconnect(); }catch(_){ } fallbackScriptProcessor(source); } }, 600);
+
+        source.connect(worklet); worklet.connect(zeroGain); zeroGain.connect(audioCtx.destination);
         log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
+
+        setTimeout(()=>{ if(sent===0){ log("⚠️ Worklet 無送包，改 ScriptProcessor"); try{ worklet.disconnect(); }catch(_){ } fallbackScriptProcessor(source); } }, 700);
       } else {
         const source = audioCtx.createMediaStreamSource(stream);
         await fallbackScriptProcessor(source);
@@ -228,18 +217,18 @@ async function join(){
   };
 
   ws.onmessage = async (ev)=>{
+    // 伺服器回的「原音=WAV（別人說）」或「譯音=MP3（所有人含自己）」：以你選的輸出裝置播放
     if(ev.data instanceof ArrayBuffer){
-      const buf=ev.data;
+      const buf = ev.data;
       const mime = sniffMime(buf);
-      const blob=new Blob([buf],{type:mime});
-      const url=URL.createObjectURL(blob);
-      const a=new Audio(url);
+      const blob = new Blob([buf],{type:mime});
+      const url  = URL.createObjectURL(blob);
+      const a = new Audio(url);
       a.autoplay = true;
-      // 讓你自由切換輸出裝置
       if (typeof a.setSinkId === 'function' && $('#outSel').value){
         try { await a.setSinkId($('#outSel').value); } catch(e){ log(`⚠️ 設定輸出失敗：${e}`); }
       }
-      a.onended=()=>{ URL.revokeObjectURL(url); };
+      a.onended = ()=>{ URL.revokeObjectURL(url); };
       a.play().catch(()=>{});
       return;
     }
@@ -270,25 +259,10 @@ $('#join').onclick = join;
 $('#leave').onclick = leave;
 $('#mute').onchange = ()=>{ if(ws && ws.readyState===1) ws.send(JSON.stringify({type:'mute', value:$('#mute').checked})); };
 
-$('#micSel').onchange = async ()=>{
-  currentMicId = $('#micSel').value || "";
-  await refreshDevices();
-  pickOutputForMic(currentMicId);
-};
+$('#micSel').onchange = async ()=>{ currentMicId = $('#micSel').value || ""; await refreshDevices(); };
 $('#outSel').onchange = ()=>{ currentOutId = $('#outSel').value || ""; };
 
-navigator.mediaDevices.addEventListener('devicechange', async ()=>{
-  const prevMic = currentMicId, prevOut = currentOutId;
-  await refreshDevices();
-  if (prevMic && !devicesCache.some(d=>d.kind==="audioinput" && d.deviceId===prevMic)) {
-    currentMicId = $('#micSel').value;
-  }
-  if (prevOut && !devicesCache.some(d=>d.kind==="audiooutput" && d.deviceId===prevOut)) {
-    pickOutputForMic(currentMicId || $('#micSel').value);
-  }
-});
-
-// 首次：拿權限→列裝置
+navigator.mediaDevices.addEventListener('devicechange', refreshDevices);
 (async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
 </body>
