--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯｜自己能聽到譯音（含 TTS 備援）</title>
+<title>中↔韓 同聲傳譯｜極速（自己端即時朗讀＋4060 加速）</title>
 <style>
   body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:920px;margin:auto}
   .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
@@ -16,7 +16,7 @@
   .hint{color:#666;font-size:13px}
 </style>
 <body>
-  <h2>中↔韓 同聲傳譯（說一句翻一句｜不回放自己原音｜Edge TTS 失敗自動備援）</h2>
+  <h2>中↔韓 同聲傳譯（說一句翻一句｜自己端立即朗讀｜Edge TTS 供他人播放）</h2>
 
   <div class="row">
     <label>名稱</label>
@@ -42,16 +42,15 @@
   <div class="row" style="margin-top:10px">
     <label for="micSel">輸入裝置</label>
     <select id="micSel"></select>
-    <label for="outSel">輸出裝置</label>
+    <label for="outSel">輸出裝置（Edge TTS MP3 用）</label>
     <select id="outSel"></select>
-    <span class="hint">MP3 會走你選的輸出裝置；若啟用瀏覽器備援朗讀，音訊走系統預設輸出。</span>
+    <span class="hint">你自己聽到的是瀏覽器朗讀（走系統預設輸出）；Edge TTS 的 MP3 只播給其他人，會走這裡選的輸出。</span>
   </div>
 
   <div class="logs" id="logs"></div>
 
 <script>
-/* 換成 cloudflared 顯示的網址（含 https://） */
-const TUNNEL_HOST = "https://cleaners-fridge-mineral-appearance.trycloudflare.com";
+const TUNNEL_HOST = "https://briefly-enlarge-packaging-adjustable.trycloudflare.com";
 
 let ws=null, audioCtx=null, worklet=null, sp=null, stream=null, pingTimer=null, txTimer=null;
 let txPkts=0;
@@ -65,13 +64,10 @@ async function refreshDevices(){
   devicesCache = await navigator.mediaDevices.enumerateDevices();
   const mics = devicesCache.filter(d=>d.kind==="audioinput");
   const outs = devicesCache.filter(d=>d.kind==="audiooutput");
-
   const micSel=$('#micSel'); micSel.innerHTML="";
   mics.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `麥克風(${d.deviceId.slice(0,6)}…)`; micSel.appendChild(o); });
-
   const outSel=$('#outSel'); outSel.innerHTML="";
   outs.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `輸出(${d.deviceId.slice(0,6)}…)`; outSel.appendChild(o); });
-
   if (currentMicId && [...micSel.options].some(o=>o.value===currentMicId)) micSel.value=currentMicId;
   if (currentOutId && [...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
 }
@@ -98,7 +94,6 @@ function cleanupAudio(){
   try{ clearInterval(txTimer); }catch(_){}
   worklet=sp=null; audioCtx=null; stream=null; pingTimer=txTimer=null; txPkts=0;
 }
-
 function leave(){
   if(ws){ try{ ws.close(); }catch(_){} }
   cleanupAudio();
@@ -107,7 +102,6 @@ function leave(){
 }
 
 async function fallbackScriptProcessor(source){
-  // 接到「靜音 zeroGain」→ destination，處理會跑但不回放自己原音
   const zeroGain = audioCtx.createGain(); zeroGain.gain.value = 0;
   sp = audioCtx.createScriptProcessor(2048,1,1);
   sp.onaudioprocess = (ev)=>{
@@ -161,7 +155,6 @@ async function join(){
 
     try{
       if (audioCtx.audioWorklet) {
-        // Worklet 也要接到「靜音 zeroGain」→ destination，否則 process 不會被拉動（TX=0）
         const blobURL = URL.createObjectURL(new Blob([`
           class ResampleWorklet extends AudioWorkletProcessor {
             constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; }
@@ -218,7 +211,7 @@ async function join(){
 
   ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      // 伺服器來的音：原音=WAV（別人說）或 譯音=MP3（所有人含自己）
+      // 伺服器來的音：原音=WAV（別人）或 譯音=MP3（給別人）
       const buf = ev.data;
       const mime = sniffMime(buf);
       const blob = new Blob([buf],{type:mime});
@@ -239,9 +232,10 @@ async function join(){
       if(o.type==="final") log(`✅ ${o.from}（${o.dir}）\n原文：${o.text}\n翻譯：${o.mt}`);
       if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
       if(o.type==="error") log(`❌ ${o.msg}`);
-      if(o.type==="tts_fallback"){
-        // Edge TTS 全失敗 → 用瀏覽器朗讀，至少你能聽到
-        speakFallback(o.text, o.lang);
+
+      // 只對「自己」送來的即時朗讀事件
+      if(o.type==="tts_client"){
+        speakNow(o.text, o.lang);
       }
     }catch(_){}
   };
@@ -259,24 +253,21 @@ function sniffMime(buf){
   return 'audio/mpeg';
 }
 
-// --- 瀏覽器備援朗讀（Edge TTS 失敗時啟用）---
+/* 你的端：立即用 Web Speech 朗讀（走系統預設輸出、延遲極低） */
 let voices = [];
-function loadVoices(){
-  voices = window.speechSynthesis.getVoices() || [];
-}
+function loadVoices(){ voices = window.speechSynthesis.getVoices() || []; }
 if ('speechSynthesis' in window){
   loadVoices();
   window.speechSynthesis.onvoiceschanged = loadVoices;
 }
-function speakFallback(text, lang){
-  if (!('speechSynthesis' in window)) { log("⚠️ 瀏覽器不支援備援朗讀"); return; }
+function speakNow(text, lang){
+  if (!('speechSynthesis' in window)) { log("⚠️ 瀏覽器不支援朗讀"); return; }
   const u = new SpeechSynthesisUtterance(text);
   u.lang = (lang==="ko" ? "ko-KR" : "zh-TW");
-  // 選擇最匹配的系統語音
   const cand = voices.filter(v => v.lang && v.lang.toLowerCase().startsWith(lang==="ko"?"ko":"zh"));
   if (cand.length) u.voice = cand[0];
   u.rate = 1.0; u.pitch = 1.0; u.volume = 1.0;
-  window.speechSynthesis.cancel(); // 先清空佇列
+  window.speechSynthesis.cancel(); // 避免排隊
   window.speechSynthesis.speak(u);
 }
 
