--- a/index4.html
+++ b/index4.html
@@ -1,54 +1,244 @@
 <!doctype html>
 <html lang="zh-Hant">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯｜極速（自己端即時朗讀＋4060 加速）</title>
+<title>中↔韓 同聲傳譯｜音訊不回傳給發話者（4060 加速）</title>
+
+<!-- 美化樣式（不影響功能） -->
 <style>
-  body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:920px;margin:auto}
-  .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
-  input,select,button{padding:8px 10px;border:1px solid #bbb;border-radius:10px;background:#fff}
-  button{cursor:pointer}
-  button[disabled]{opacity:.5;cursor:not-allowed}
-  .pill{padding:4px 10px;border-radius:999px;background:#efefef;font-size:12px}
-  .logs{margin-top:12px;padding:10px;border:1px solid #eee;border-radius:10px;background:#fafafa;height:380px;overflow:auto;font-size:14px;white-space:pre-wrap}
-  .now{color:#1b7fbd}
-  .stat{font-family:monospace}
-  .hint{color:#666;font-size:13px}
+  :root{
+    --bg: #0b1220;
+    --bg2:#0e1830;
+    --card:#0f1b33cc;
+    --muted:#8aa0c2;
+    --text:#e9f0ff;
+    --primary:#6aa7ff;
+    --primary-2:#7be2ff;
+    --accent:#c9f27b;
+    --danger:#ff6b6b;
+    --ok:#75e0a2;
+    --ring:#213454;
+    --border:#20304a;
+    --shadow: 0 10px 30px rgba(0,0,0,.35);
+    --radius: 16px;
+  }
+
+  /* 背景動態漸層 */
+  body{
+    margin:0; min-height:100vh; color:var(--text);
+    font-family:ui-sans-serif, system-ui, -apple-system, "Noto Sans TC", "Microsoft JhengHei", Segoe UI, Roboto, Arial, Apple Color Emoji, Noto Color Emoji;
+    background:
+      radial-gradient(1200px 600px at 10% -10%, #264b9a33, transparent 60%),
+      radial-gradient(1000px 500px at 110% 10%, #1a7fb833, transparent 60%),
+      linear-gradient(180deg, var(--bg), var(--bg2));
+  }
+
+  .wrap{ max-width:1080px; margin:0 auto; padding:28px 18px 40px; }
+
+  .hero{
+    display:flex; align-items:center; gap:14px; margin-bottom:18px;
+  }
+  .logo{
+    width:42px; height:42px; border-radius:12px;
+    background: conic-gradient(from 220deg, var(--primary), var(--primary-2), var(--accent), var(--primary));
+    box-shadow: 0 0 0 6px #6aa7ff22, var(--shadow);
+  }
+  h2{ margin:0; font-size:22px; letter-spacing:.3px; }
+  .subtitle{ color:var(--muted); font-size:13px; margin-top:2px; }
+
+  .card{
+    background: var(--card);
+    backdrop-filter: blur(10px);
+    border:1px solid var(--border);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    padding:18px;
+  }
+
+  /* 表單佈局 */
+  .grid{
+    display:grid; gap:12px;
+    grid-template-columns: repeat(12, 1fr);
+    align-items:center;
+  }
+  .col-2{ grid-column: span 2; }
+  .col-3{ grid-column: span 3; }
+  .col-4{ grid-column: span 4; }
+  .col-5{ grid-column: span 5; }
+  .col-6{ grid-column: span 6; }
+  .col-7{ grid-column: span 7; }
+  .col-8{ grid-column: span 8; }
+  .col-12{ grid-column: span 12; }
+
+  @media (max-width: 880px){
+    .col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8{ grid-column: span 12; }
+  }
+
+  label{ font-size:13px; color:var(--muted); display:block; margin-bottom:6px; }
+
+  input[type="text"], select{
+    width:100%;
+    padding:10px 12px;
+    background:#0b1730;
+    color:var(--text);
+    border:1px solid var(--ring);
+    border-radius:12px;
+    outline:none;
+    transition: box-shadow .2s, border-color .2s, transform .05s;
+    box-shadow: inset 0 0 0 1px #ffffff07;
+  }
+  input[type="text"]:focus, select:focus{
+    border-color: var(--primary);
+    box-shadow: 0 0 0 4px #6aa7ff22;
+  }
+
+  .switches{
+    display:flex; flex-wrap:wrap; gap:12px 18px; align-items:center;
+  }
+  .switches label{ display:flex; align-items:center; gap:8px; margin:0; }
+  .switches input[type="checkbox"]{
+    inline-size:18px; block-size:18px; accent-color: var(--primary);
+  }
+
+  .btns{ display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
+  button{
+    border:1px solid var(--ring);
+    color:var(--text);
+    background:#0b1730;
+    padding:10px 14px; border-radius:12px;
+    cursor:pointer; transition:transform .05s ease, box-shadow .2s, border-color .2s, background .2s;
+  }
+  button:active{ transform: translateY(1px); }
+  button[disabled]{ opacity:.5; cursor:not-allowed; }
+
+  .btn-primary{
+    background: linear-gradient(180deg, #6aa7ff, #5b8ffb);
+    border-color:#6aa7ffcc;
+    box-shadow: 0 8px 18px #6aa7ff3a, inset 0 0 1px #ffffffaa;
+    color:#0b1220; font-weight:700;
+  }
+  .btn-primary:hover{ filter: brightness(1.05); }
+  .btn-danger{
+    background: linear-gradient(180deg, #ff7b7b, #ff6262);
+    border-color:#ff9a9a;
+    box-shadow: 0 8px 18px #ff6b6b33, inset 0 0 1px #ffffffaa;
+    color:#1a0c0c; font-weight:700;
+  }
+
+  .status{
+    font-size:12px; padding:6px 10px;
+    border-radius:999px; border:1px solid var(--ring);
+    background:#0b1730; color:var(--muted);
+    display:inline-flex; align-items:center; gap:8px;
+  }
+  .dot{
+    width:8px; height:8px; border-radius:50%; background:#8aa0c2;
+    box-shadow: 0 0 0 4px #8aa0c210;
+  }
+  .now .dot{ background: var(--ok); box-shadow: 0 0 0 4px #75e0a220; }
+  .now{ color:var(--ok)!important; border-color:#2d5a4a; }
+
+  .tx{
+    font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+    font-size:12px; color:#cfe2ff; background:#0b1730; padding:6px 10px; border-radius:10px; border:1px solid var(--ring);
+  }
+
+  .hint{ color:var(--muted); font-size:12px; }
+
+  .logs{
+    margin-top:16px; padding:14px 14px 18px;
+    border:1px solid var(--ring); border-radius:14px;
+    background:
+      radial-gradient(400px 180px at 10% -10%, #6aa7ff10, transparent 50%),
+      #071226;
+    height:390px; overflow:auto; font-size:13.5px; line-height:1.6;
+    box-shadow: inset 0 0 0 1px #ffffff05, var(--shadow);
+    white-space:pre-wrap;
+  }
+  .logs::-webkit-scrollbar{ width:10px; height:10px; }
+  .logs::-webkit-scrollbar-thumb{
+    background: linear-gradient(180deg, #3a5f9d, #2d4e86);
+    border-radius:10px; border:2px solid #0b1220;
+  }
+
+  .footer{
+    color:var(--muted); font-size:12px; text-align:center; margin-top:18px;
+  }
 </style>
+</head>
+
 <body>
-  <h2>中↔韓 同聲傳譯（說一句翻一句｜自己端立即朗讀｜Edge TTS 給他人）</h2>
+  <div class="wrap">
+    <!-- 頂部 -->
+    <div class="hero">
+      <div class="logo" aria-hidden="true"></div>
+      <div>
+        <h2>中↔韓 同聲傳譯（音訊不回傳給發話者｜Edge TTS 播給其他人）</h2>
+        <div class="subtitle">說一句翻一句｜4060 加速｜AirPods/裝置切換支援</div>
+      </div>
+    </div>
 
-  <div class="row">
-    <label>名稱(이름)</label>
-    <input id="name" type="text" value="Public" placeholder="你的名字 / 이름" />
-    <label>來源語言(원어)</label>
-    <select id="srcLang">
-      <option value="zh" selected>中文 (중국어)</option>
-      <option value="ko">韓文 (한국어)</option>
-    </select>
-    <button id="join">加入(입장)</button>
-    <button id="leave" disabled>離開(나가기)</button>
-    <span class="pill" id="status">未連線(미연결)</span>
+    <!-- 卡片：控制區 -->
+    <div class="card" style="margin-bottom:14px;">
+      <div class="grid">
+        <div class="col-4">
+          <label for="name">名稱(이름)</label>
+          <input id="name" type="text" value="Public" placeholder="你的名字 / 이름" />
+        </div>
+
+        <div class="col-3">
+          <label for="srcLang">來源語言(원어)</label>
+          <select id="srcLang">
+            <option value="zh" selected>中文 (중국어)</option>
+            <option value="ko">韓文 (한국어)</option>
+          </select>
+        </div>
+
+        <div class="col-5">
+          <label>連線(연결)</label>
+          <div class="btns">
+            <button id="join" class="btn-primary">加入(입장)</button>
+            <button id="leave" class="btn-danger" disabled>離開(나가기)</button>
+            <span id="status" class="status"><span class="dot"></span> 未連線(미연결)</span>
+            <span class="tx" id="tx">TX: 0 pkt/s</span>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="switches">
+            <label><input id="mute" type="checkbox"> 不送出麥克風(마이크 전송 안 함)</label>
+            <label><input id="echo" type="checkbox" checked> 回聲抑制(에코 제거)</label>
+            <label><input id="ns"   type="checkbox" checked> 降噪(소음 억제)</label>
+            <label><input id="agc"  type="checkbox"> 自動增益(자동 이득)</label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 卡片：裝置 -->
+    <div class="card">
+      <div class="grid">
+        <div class="col-6">
+          <label for="micSel">輸入裝置(마이크)</label>
+          <select id="micSel"></select>
+        </div>
+        <div class="col-6">
+          <label for="outSel">輸出裝置(출력, Edge TTS)</label>
+          <select id="outSel"></select>
+        </div>
+        <div class="col-12">
+          <div class="hint">音訊只傳給「其他人」，不回傳給發話者 / 발화자에게는 오디오가 돌아오지 않습니다.</div>
+        </div>
+      </div>
+
+      <div class="logs" id="logs"></div>
+    </div>
+
+    <div class="footer">若要更換語音(Voice)或 Cloudflare 網域，僅需改環境變數或檔案內常數；功能不受影響。</div>
   </div>
 
-  <div class="row" style="margin-top:10px">
-    <label><input id="mute" type="checkbox"> 不送出麥克風(마이크 전송 안 함)</label>
-    <label><input id="echo" type="checkbox" checked> 回聲抑制(에코 제거)</label>
-    <label><input id="ns"   type="checkbox" checked> 降噪(소음 억제)</label>
-    <label><input id="agc"  type="checkbox"> 自動增益(자동 이득)</label>
-    <span class="stat" id="tx">TX: 0 pkt/s</span>
-  </div>
-
-  <div class="row" style="margin-top:10px">
-    <label for="micSel">輸入裝置(마이크)</label>
-    <select id="micSel"></select>
-    <label for="outSel">輸出裝置(출력 장치, Edge TTS)</label>
-    <select id="outSel"></select>
-    <span class="hint">你自己聽到的是瀏覽器朗讀（系統預設輸出）/ 본인 재생은 브라우저 음성합성 사용.</span>
-  </div>
-
-  <div class="logs" id="logs"></div>
-
+<!-- === 功能腳本（原功能不變） === -->
 <script>
 // 換成 cloudflared 顯示的網址（含 https://）
 const TUNNEL_HOST = "https://devon-easily-feedback-denver.trycloudflare.com";
@@ -99,7 +289,7 @@ function leave(){
   if(ws){ try{ ws.close(); }catch(_){} }
   cleanupAudio();
   $('#join').disabled=false; $('#leave').disabled=true;
-  $('#status').textContent="未連線(미연결)"; $('#status').classList.remove('now');
+  const s=$('#status'); s.classList.remove('now'); s.innerHTML='<span class="dot"></span> 未連線(미연결)';
 }
 
 async function fallbackScriptProcessor(source){
@@ -141,7 +331,7 @@ async function join(){
   ws.binaryType = 'arraybuffer';
 
   ws.onopen = async ()=>{
-    $('#status').textContent="已連線(연결됨)"; $('#status').classList.add('now');
+    const s=$('#status'); s.classList.add('now'); s.innerHTML='<span class="dot"></span> 已連線(연결됨)';
     ws.send(JSON.stringify({name, src_lang: srcLang}));
 
     try{
@@ -212,7 +402,7 @@ async function join(){
 
   ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      // 伺服器來的音：原音=WAV（別人）或 譯音=MP3（給別人）
+      // 伺服器來的音：只會是「別人的原音/譯音」。不會回到自己。
       const buf = ev.data;
       const mime = sniffMime(buf);
       const blob = new Blob([buf],{type:mime});
@@ -233,11 +423,6 @@ async function join(){
       if(o.type==="final") log(`✅ ${o.from}（${o.dir}）\n原文/원문：${o.text}\n翻譯/번역：${o.mt}`);
       if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音(음소거)":"取消靜音(해제)"}`);
       if(o.type==="error") log(`❌ ${o.msg}`);
-
-      // 只對「自己」送來的即時朗讀事件（Edge TTS 失敗也不影響）
-      if(o.type==="tts_client"){
-        speakNow(o.text, o.lang);
-      }
     }catch(_){}
   };
 
@@ -252,24 +437,6 @@ function sniffMime(buf){
     if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
   }
   return 'audio/mpeg';
-}
-
-/* 你的端：立即用 Web Speech 朗讀（極低延遲）*/
-let voices = [];
-function loadVoices(){ voices = window.speechSynthesis.getVoices() || []; }
-if ('speechSynthesis' in window){
-  loadVoices();
-  window.speechSynthesis.onvoiceschanged = loadVoices;
-}
-function speakNow(text, lang){
-  if (!('speechSynthesis' in window)) { log("⚠️ 瀏覽器不支援朗讀(미지원)"); return; }
-  const u = new SpeechSynthesisUtterance(text);
-  u.lang = (lang==="ko" ? "ko-KR" : "zh-TW");
-  const cand = voices.filter(v => v.lang && v.lang.toLowerCase().startsWith(lang==="ko"?"ko":"zh"));
-  if (cand.length) u.voice = cand[0];
-  u.rate = 1.0; u.pitch = 1.0; u.volume = 1.0;
-  window.speechSynthesis.cancel(); // 避免排隊/대기 방지
-  window.speechSynthesis.speak(u);
 }
 
 $('#join').onclick = join;
